modify 重构效果系统, 完善部分内容